--- a/src/login/signIn.css
+++ b/src/login/signIn.css
@@ -124,6 +124,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
+  background-color: transparent !important;
   transition: background-color 5000s ease-in-out 0s;
   -webkit-text-fill-color: rgb(255, 255, 255);
 }
