--- a/src/login/signIn.css
+++ b/src/login/signIn.css
@@ -126,5 +126,10 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   background-color: transparent !important;
   transition: background-color 5000s ease-in-out 0s;
+  -webkit-box-shadow: 0 0 0 50px rgba(0, 0, 0, 0) inset;
   -webkit-text-fill-color: rgb(255, 255, 255);
+}
+
+input:-internal-autofill-selected {
+  background-color: transparent !important;
 }
