--- a/src/login/signIn.css
+++ b/src/login/signIn.css
@@ -24,6 +24,7 @@
   justify-content: center;
   align-items: center;
   transition: all 0.8s ease;
+  padding: 20px;
 }
 
 .error-box .close {
@@ -129,7 +130,25 @@ input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 50px rgba(0, 0, 0, 0) inset !important;
   -webkit-text-fill-color: rgb(255, 255, 255) !important;
 }
-/* 
-input:-internal-autofill-selected {
-  background-color: transparent !important;
-} */
+
+@media (max-width: 360px) {
+  .error-box,
+  .box {
+    width: 250px;
+  }
+
+  .box h1,
+  .box h2 {
+    font-size: 1.5rem;
+    margin-bottom: 15px;
+  }
+
+  .box h2 {
+    font-size: 1rem;
+    color: #92cf50;
+  }
+
+  .error-box {
+    font-size: 0.8rem;
+  }
+}
