--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,16 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  border: 0;
-  vertical-align: baseline;
+:root {
+  --accent-color: #759138;
+  --layout-navbar: #2f2f2f;
+  --active: #1f1f1f;
 }
 
-:focus {
-  outline: 0;
-}
-
-::selection {
-  background-color: #b3d4fc;
-  color: #000000;
-  text-shadow: none;
-}
-
-html,
-body {
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-  font-weight: normal;
-  font-size: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-
-ul,
-nav {
-  list-style: none;
-}
-
-img {
-  border: 0;
-  display: block;
-  max-width: 100%;
-}
-
-table {
-  border-spacing: 0;
-  border-collapse: collapse;
-}
-
-a {
-  color: inherit;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
-  vertical-align: middle;
-}
-
-button,
-input {
-  line-height: normal;
-}
-
-button,
-select {
-  text-transform: none;
+.wrapper {
+  font-family: "Rubik", sans-serif;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 18em 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+    "layout-navbar layout-header"
+    "layout-navbar layout-pages";
 }
