--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -14,6 +14,15 @@
   margin: 20px auto 40px;
 }
 
+.empty-data {
+  font-size: 32px;
+  text-align: center;
+}
+
+.empty-data span {
+  margin: 20px;
+}
+
 .slick-prev,
 .slick-next {
   width: 40px;
