--- a/src/login/signIn.css
+++ b/src/login/signIn.css
@@ -155,17 +155,17 @@ i.fas.fa-laptop.logo {
 }
 
 /* autofill */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
+.inputBox input:-webkit-autofill,
+.inputBox input:-webkit-autofill:hover,
+.inputBox input:-webkit-autofill:focus,
+.inputBox input:-webkit-autofill:active {
   background-color: transparent !important;
   transition: background-color 5000s ease-in-out 0s !important;
   box-shadow: 0 0 0 50px rgba(0, 0, 0, 0) inset !important;
   -webkit-text-fill-color: rgb(255, 255, 255) !important;
 }
 
-input::-ms-reveal {
+.inputBox input::-ms-reveal {
   display: none;
 }
 
