--- a/src/pages/administration/users/Users.css
+++ b/src/pages/administration/users/Users.css
@@ -1,7 +1,7 @@
-.stock {
+.users {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: calc(100vh - 100px);
   align-content: space-evenly;
   flex-wrap: wrap;
