--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 .wrapper {
   font-family: "Rubik", sans-serif;
   height: 100vh;
+  overflow: hidden;
   display: grid;
   grid-template-columns: 18em 1fr;
   grid-template-rows: 50px 1fr;
