--- a/src/pages/administration/categories/NewCategory.css
+++ b/src/pages/administration/categories/NewCategory.css
@@ -1,44 +1,41 @@
-.new-categories {
+.new-category {
   display: flex;
-  justify-content: center;
-  background-color: #ffffff;
   padding: 30px;
-  flex-grow: 0;
-  flex-wrap: wrap;
-  width: 445px;
-  margin: 20px auto 0;
+  background-color: #ffffff;
   box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
+  width: 425px;
+  margin: 40px auto;
 }
 
-.new-categories .category-form {
+.new-category-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
 }
 
-.new-categories .category-form label {
+.new-category-form label {
   font-size: 18px;
   font-weight: bold;
 }
 
-.new-categories .category-form input[type="text"],
-.new-categories .category-form input[type="submit"] {
-  padding: 10px;
+.new-category-form input[type="text"],
+.new-category-form input[type="submit"] {
   margin-left: 20px;
 }
 
-.new-categories .category-form input[type="text"] {
+.new-category-form input[type="text"] {
   border-bottom: 2px solid #759138;
 }
 
-.new-categories .category-form input[type="submit"] {
+.new-category-form input[type="submit"] {
   background-color: #759138;
   color: #ffffff;
   cursor: pointer;
   font-weight: bold;
+  padding: 10px;
 }
-.new-categories .new-categories-error {
+.new-categories-error {
   position: absolute;
   color: #c42424;
   bottom: -25px;
@@ -47,7 +44,6 @@
 
 @media (max-width: 1024px) {
   .new-categories {
-    padding: 30px;
-    margin: 0 auto 20px;
+    margin: 20px auto;
   }
 }
