--- a/src/pages/administration/production/NewProduct.css
+++ b/src/pages/administration/production/NewProduct.css
@@ -1,39 +1,43 @@
-.edit-categories {
+.new-product {
   display: flex;
   padding: 30px;
   background-color: #ffffff;
   box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 0.5);
+  width: 425px;
+  margin: 40px auto;
 }
 
-.edit-category-form {
+.new-product-form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
 }
 
-.edit-category-form label {
+.new-product-form label {
   font-size: 18px;
   font-weight: bold;
 }
 
-.edit-category-form input[type="text"],
-.edit-category-form input[type="submit"] {
+.new-product-form select,
+.new-product-form input[type="text"],
+.new-product-form input[type="submit"] {
   margin-left: 20px;
 }
 
-.edit-category-form input[type="text"] {
+.new-product-form select,
+.new-product-form input[type="text"] {
   border-bottom: 2px solid #759138;
 }
 
-.edit-category-form input[type="submit"] {
+.new-product-form input[type="submit"] {
   background-color: #759138;
   color: #ffffff;
   cursor: pointer;
   font-weight: bold;
   padding: 10px;
 }
-.edit-categories-error {
+.new-product-error {
   position: absolute;
   color: #c42424;
   bottom: -25px;
@@ -41,7 +45,7 @@
 }
 
 @media (max-width: 1024px) {
-  .new-categories {
+  .new-product {
     margin: 20px auto;
   }
 }
