--- a/src/pages/administration/production/Products.css
+++ b/src/pages/administration/production/Products.css
@@ -1,10 +1,10 @@
 .products {
-  position: relative;
+  /* position: relative;
   display: flex;
   flex-direction: row;
   height: calc(100vh - 100px);
   align-content: space-evenly;
   flex-wrap: wrap;
   width: calc(100vw - 328px);
-  justify-content: center;
+  justify-content: center; */
 }
